# safecloset

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  build-all-targets.sh  build.sh  compile-all-targets.sh  fmt.sh  release.sh
src/: error.rs  main.rs
src/cli/: args.rs  mod.rs
src/core/: closed_drawer.rs  closet.rs  core_error.rs  drawer_content.rs  drawer_id.rs  drawer_settings.rs  entry.rs  mod.rs  open_closet.rs  open_drawer.rs  random.rs  ser_closet.rs  ser_drawer.rs
src/csv/: mod.rs
src/import/: import_set.rs  mod.rs
src/search/: fuzzy_pattern.rs  mod.rs  name_match.rs  pos.rs
src/timer/: mod.rs
src/tui/: action.rs  app.rs  app_state.rs  cmd_result.rs  content_skin.rs  content_view.rs  dialog.rs  drawer_drawing_layout.rs  drawer_edit_state.rs  drawer_focus.rs  drawer_state.rs  entry_ref.rs  entry_state.rs  global_view.rs  help.rs  help_content.rs  help_state.rs  keys.rs  matched_string.rs  menu_state.rs  menu_view.rs  message.rs  mod.rs  password_input_state.rs  scroll.rs  search_state.rs  status_view.rs  task.rs  title_view.rs  view.rs
src/tui/comments_editor/: comments_editor_state.rs  comments_editor_view.rs  mod.rs
src/tui/file_selector/: file_selector_state.rs  file_selector_view.rs  file_type.rs  mod.rs
src/tui/import/: choices.rs  decide_origin_kind.rs  import_state.rs  import_view.rs  mod.rs
src/tui/menu/: action_menu.rs  confirm.rs  menu.rs  menu_state.rs  menu_view.rs  mod.rs
src/tui/password_dialog/: mod.rs  password_dialog_purpose.rs  password_dialog_state.rs  password_dialog_view.rs
src/tui/skin/: app_skin.rs  content_skin.rs  dialog_skin.rs  mod.rs  status_skin.rs
website/: README.md  ddoc.hjson  deploy.sh  mkdocs.yml
website/docs/: README.md  community.md  faq.md  features.md  index.md  install.md  usage.md
website/docs/css/: extra.css
website/docs/js/: autoclose-tree.js
website/src/: community.md  install.md
website/src/css/: site.css
