[package]
name = "safecloset"
version = "1.3.0-dev"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/safecloset"
description = "Secret Keeper"
keywords = ["secret", "tui", "cryptography", "password"]
license = "AGPL-3.0"
categories = ["command-line-interface", "cryptography"]
readme = "README.md"
rust-version = "1.59"

[features]
default = ["clipboard"]
clipboard = ["terminal-clipboard"]

[dependencies]
aes-gcm-siv = "=0.10.3"
argh = "=0.1.6"
char_reader = "=0.1.1"
cli-log = "=2.0.0"
crokey = "0.4.3"
crossbeam = "=0.8.1"
log = "=0.4.14"
once_cell = "1.7"
rand = "=0.8.4"
rmp-serde = "=0.15.5"
rust-argon2 = "=0.8.3"
secular = { version = "1.0.1", features = ["normalization"] }
serde = { version = "1.0.128", features = ["derive"] }
termimad = "=0.23.0"
terminal-clipboard = { version = "=0.4.0", optional = true }
thiserror = "=1.0.26"
unicode-width = "=0.1.10"

[dev-dependencies]
tempfile = "=3.2.0"

[profile.release]
lto = true
strip = true

[patch.crates-io]
# crokey = { path = "../crokey" }
# coolor = { path = "../coolor" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# terminal-clipboard = { path = "../terminal-clipboard" }
