[package]
name = "safecloset"
version = "1.4.2"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/safecloset"
description = "Secret Keeper"
keywords = ["secret", "tui", "cryptography", "password"]
license = "AGPL-3.0"
categories = ["command-line-interface", "cryptography"]
readme = "README.md"
rust-version = "1.62"

[features]
default = ["clipboard"]
clipboard = ["terminal-clipboard"]

[dependencies]
aes-gcm-siv = "=0.11.1"
argh = "=0.1.13"
char_reader = "=0.1.1"
cli-log = "=2.1.0"
crokey = "1.3"
crossbeam = "=0.8.4"
once_cell = "1.21"
rand = "=0.9.2"
rmp-serde = "=1.3.0"
rust-argon2 = "=3.0.0"
secular = { version = "1.0.1", features = ["normalization"] }
serde = { version = "1.0.219", features = ["derive"] }
termimad = "=0.34.1"
terminal-clipboard = { version = "=0.4.1", optional = true }
thiserror = "=2.0.12"
unicode-width = "=0.2.2"

[dev-dependencies]
tempfile = "=3.2.0"

[profile.release]
lto = true
strip = true

[patch.crates-io]
# crokey = { path = "../crokey" }
# coolor = { path = "../coolor" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# terminal-clipboard = { path = "../terminal-clipboard" }

